--- a/bpic2011_explanations_bucket_single_encoding_agg_cls_xgboost.ipynb
+++ b/bpic2011_explanations_bucket_single_encoding_agg_cls_xgboost.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BPIC2011\n",
+    "Bucket: Single\n",
+    "\n",
+    "Encoding: Aggregation\n",
+    "\n",
+    "Classifier: XGBoost\n",
+    "\n",
+    "The notebook has all the code for running the benchmark and deriving explanations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -79,7 +93,7 @@
     "    feat_names = feature_combiner.get_feature_names()\n",
     "    base_imp = imp_df(feat_names, cls.feature_importances_)\n",
     "    base_imp.head(15)\n",
-    "    var_imp_plot(base_imp, 'Feature importance using Random forest', 15)\n",
+    "    var_imp_plot(base_imp, 'Feature importance using XGBoost', 15)\n",
     "    return base_imp\n",
     "    "
    ]
@@ -447,6 +461,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Local Explanations generated for traces\n",
+    "\n",
+    "Prefix lengths include 5, 10 and 25"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
@@ -498,6 +521,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -522,8 +552,8 @@
     }
    ],
    "source": [
-    "print('printing global feature importance of the random forest classifier') \n",
-    "var_imp_plot(importance, 'Feature importance using Random forest', 10)"
+    "print('printing global feature importance of the XGBoost classifier') \n",
+    "var_imp_plot(importance, 'Feature importance using XGBoost', 10)"
    ]
   },
   {
